samples/_failures_safe/1761424164_011e4d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8effe43b.c: In function ‘main’:
./samples/SAFE/__tmp_8effe43b.c:144:60: error: expected ‘)’ at end of input
  144 |     if (!compress_rle(input_buffer, input_size, &compressed
      |                      ~                                     ^
      |                                                            )
./samples/SAFE/__tmp_8effe43b.c:144:5: error: expected declaration or statement at end of input
  144 |     if (!compress_rle(input_buffer, input_size, &compressed
      |     ^~
